--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "homepage": "https://lyurko.github.io/atxconstruction",
   "dependencies": {
+    "@material-ui/core": "^1.4.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "history": "^4.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
