--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "homepage": "https://lyurko.github.io/atxconstruction",
   "dependencies": {
     "@material-ui/core": "^1.4.1",
+    "history": "^4.7.2",
+    "material-ui": "^0.20.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "history": "^4.7.2"
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
