--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://lyurko.github.io/atxconstruction",
   "dependencies": {
     "@material-ui/core": "^1.4.1",
+    "@material-ui/icons": "^2.0.0",
     "history": "^4.7.2",
     "material-ui": "^0.20.1",
     "react": "^16.4.1",
