--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@material-ui/icons": "^2.0.0",
     "history": "^4.7.2",
     "material-ui": "^0.20.1",
+    "node-sass": "^4.9.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "sass-loader": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
