move cname to public

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atx-construction",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lyurko.github.io/atxconstruction/src",
+  "homepage": "https://lyurko.github.io/atxconstruction",
   "dependencies": {
     "@material-ui/core": "^1.4.1",
     "@material-ui/icons": "^2.0.0",
